Add favicon and update styles

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Is Today a Sirtuk Day?</title>
+    <link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" href="favicon/apple-touch-icon.png">
     <link rel="stylesheet" href="styles.css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700|Playfair+Display:400,700' rel='stylesheet' type='text/css'>
 </head>
@@ -19,6 +23,7 @@
         <footer>
             <p>Created by <a href="https://github.com/MotiWolff" target="_blank">Moti Wolff</a></p>
             <p>Hebrew dates powered by <a href="https://www.hebcal.com" target="_blank">Hebcal</a></p>
+            <p class="attribution">Jewish icon by <a href="https://www.flaticon.com/free-icons/jewish" title="jewish icons">Freepik - Flaticon</a></p>
         </footer>
     </div>
     <script src="script.js"></script>
