Add code obfuscation and update dependencies

--- a/index.html
+++ b/index.html
@@ -74,6 +74,6 @@
             <p class="attribution">Jewish icon by <a href="https://www.flaticon.com/free-icons/jewish" title="jewish icons" rel="noopener">Freepik - Flaticon</a></p>
         </footer>
     </div>
-    <script src="script.js"></script>
+    <script src="script.obfuscated.js"></script>
 </body>
 </html> 
