Fix: Show Hebrew date even on Shabbat

--- a/index.html
+++ b/index.html
@@ -75,5 +75,6 @@
         </footer>
     </div>
     <script src="script.obfuscated.js"></script>
+    <script src="script.js"></script>
 </body>
 </html> 
