Remove debug alert

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <footer>
             <p>Created by <a href="https://github.com/MotiWolff" target="_blank" rel="noopener">Moti Wolff</a></p>
             <p>Hebrew dates powered by <a href="https://www.hebcal.com" target="_blank" rel="noopener">Hebcal</a></p>
-            <p class="attribution">Jewish icon by <a href="https://www.flaticon.com/free-icons/jewish" title="jewish icons" rel="noopener">Freepik - Flaticon</a></p>
+            <p>Jewish icon by <a href="https://www.flaticon.com/free-icons/jewish" title="jewish icons" rel="noopener">Freepik - Flaticon</a></p>
         </footer>
     </div>
     <script src="script.obfuscated.js"></script>
